--- a/.github/workflows/SCA.yml
+++ b/.github/workflows/SCA.yml
@@ -1,41 +1,20 @@
-name: SonarCloud Scan
- 
+name: Build
 on:
   push:
     branches:
       - main
+  pull_request:
+    types: [opened, synchronize, reopened]
 jobs:
-  build:
+  sonarcloud:
+    name: SonarQube Cloud
     runs-on: ubuntu-latest
-    
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
- 
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
+      - uses: actions/checkout@v4
         with:
-          node-version: '16'  # You can adjust the version as needed
- 
-      - name: Install dependencies
-        run: npm install
-
-      - name: Set up Java 17
-        uses: actions/setup-java@v3
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-
-      - name: Install SonarCloud Scanner
-        run: npm install -g sonar-scanner
-
-      - name: Run SonarCloud Scan
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      - name: SonarQube Cloud Scan
+        uses: SonarSource/sonarcloud-github-action@master
         env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}  # SonarCloud token stored as a GitHub secret
-        run: |
-          sonar-scanner \
-          -Dsonar.projectKey=vivek28058_sonarcloud \
-          -Dsonar.organization=vivek28058 \
-          -Dsonar.sources=. \
-          -Dsonar.host.url=https://sonarcloud.io \
-          -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
