--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,8 @@
-sonar.projectKey=vivek28058_skill-fe
+sonar.projectKey=vivek28058_skillviz_FE
 sonar.organization=vivek28058
 
 # This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=Skill_FE
+#sonar.projectName=skillviz_FE
 #sonar.projectVersion=1.0
 
 
