--- a/.github/workflows/SCA.yml
+++ b/.github/workflows/SCA.yml
@@ -1,8 +1,9 @@
-name: Sonar and Snyk scan
+name: Sonar, Snyk, and ZAP Scan
 on:
   push:
     branches:
       - main
+
 jobs:
   sonarcloud:
     name: SonarQube Cloud
@@ -32,3 +33,30 @@ jobs:
       - name: Monitor Snyk SCA Scan
         run: snyk monitor --all-projects
         continue-on-error: true
+
+  zap_scan:
+    name: ZAP DAST Scan
+    runs-on: ubuntu-latest
+    needs: sonarcloud  # Ensure this job runs after sonarcloud
+    steps:
+      - uses: actions/checkout@v4  # Re-checkout code to make sure it is available in this job
+
+      - name: Set up Docker
+        uses: docker/setup-buildx-action@v2  # Set up Docker Buildx for cross-platform builds
+
+      - name: Run ZAP Scan
+        run: |
+          docker run -v $(pwd):/zap/wrk:rw -t owasp/zap2docker-stable zap-full-scan.py -t https://igsglobal.com/
+        env:
+          ZAP_URL: https://igsglobal.com/  # Replace this with the actual URL of your app
+
+      - name: Save ZAP Report
+        run: |
+          mkdir -p zap-reports
+          cp /zap/wrk/*.html zap-reports/  # Copy the ZAP HTML report to the artifacts directory
+
+      - name: Upload ZAP Report as Artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: zap-reports
+          path: zap-reports/
