--- a/.github/workflows/Imagescan.yml
+++ b/.github/workflows/Imagescan.yml
@@ -26,8 +26,13 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y wget
-          wget -qO- https://github.com/aquasecurity/trivy/releases/latest/download/trivy_$(uname -s)_$(uname -m).tar.gz | tar xvz
+          # Define Trivy version for stability
+          TRIVY_VERSION=$(curl -s https://api.github.com/repos/aquasecurity/trivy/releases/latest | grep 'tag_name' | cut -d\" -f4)
+          wget -qO trivy.tar.gz https://github.com/aquasecurity/trivy/releases/download/${TRIVY_VERSION}/trivy_$(uname -s)_$(uname -m).tar.gz
+          tar -xvzf trivy.tar.gz
           sudo mv trivy /usr/local/bin/
+          trivy --version
+
 
       # Scan Docker Image with Trivy
       - name: Scan Docker Image
