--- a/.github/workflows/Security-Scans.yml
+++ b/.github/workflows/Security-Scans.yml
@@ -122,24 +122,31 @@ jobs:
         run: |
           snyk monitor --docker myapp:latest --project-name=SkillsViz
           
-      - name: ZAP Dynamic Analysis Scan
-        uses: zaproxy/action-full-scan@v0.12.0
-        with:
-          target: 'http://www.itsecgames.com/'
-          rules_file_name: '.github/workflows/rules.zap'
-          cmd_options: '-J zap_report.json'
+     # - name: ZAP Dynamic Analysis Scan
+    #    uses: zaproxy/action-full-scan@v0.12.0
+     #   with:
+     #     target: 'http://www.itsecgames.com/'
+       #   rules_file_name: '.github/workflows/rules.zap'
+        #  cmd_options: '-J zap_report.json'
 
-      - name: Debug ZAP JSON Output
-        run: |
-          echo "ZAP JSON Report:"
-          cat zap_report.json
-          echo "Formatted ZAP JSON Output:"
-          jq '.' zap_report.json
-        shell: bash
+    #  - name: Debug ZAP JSON Output
+    #    run: |
+     #     echo "ZAP JSON Report:"
+      #    cat zap_report.json
+      #    echo "Formatted ZAP JSON Output:"
+     #     jq '.' zap_report.json
+     #   shell: bash
 
-      - name: Upload ZAP Reports
-        uses: actions/upload-artifact@v3
+   #   - name: Upload ZAP Reports
+   #     uses: actions/upload-artifact@v3
+    #    with:
+    #      name: zap-reports
+    #      path: |
+     #       zap_report.json
+
+      - name: Run AppSweep Scan
+        id: appsweep-scan
+        uses: guardsquare/appsweep-action@main
         with:
-          name: zap-reports
-          path: |
-            zap_report.json
+          appsweep_api_key: ${{ secrets.APPSWEEP_API_KEY }}
+          input_file: Test.apk
