--- a/.github/workflows/Security-Scans.yml
+++ b/.github/workflows/Security-Scans.yml
@@ -16,29 +16,29 @@ jobs:
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
 
-     # - name: Set up Node.js
-      #  uses: actions/setup-node@v3
-       # with:
-        #  node-version: '16'  # Or your project’s Node version
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '16'  # Or your project’s Node version
 
-     # - name: Install dependencies
-      #  run: |
-       #   npm install
+      - name: Install dependencies
+        run: |
+          npm install
 
-     # - name: Run Jest tests with coverage
-      #  run: |
-       #   npm test -- --coverage
+      - name: Run Jest tests with coverage
+        run: |
+          npm test -- --coverage
 
-     # - name: Upload Jest coverage to Codecov
-      #  uses: codecov/codecov-action@v3
-       # with:
-        #  token: ${{ secrets.CODECOV_TOKEN }}
+      - name: Upload Jest coverage to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
 
-    #  - name: Upload Jest Coverage Report
-     #   uses: actions/upload-artifact@v3
-      #  with:
-       #   name: coverage-report
-        #  path: coverage/lcov-report/index.html
+      - name: Upload Jest Coverage Report
+        uses: actions/upload-artifact@v3
+        with:
+          name: coverage-report
+          path: coverage/lcov-report/index.html
 
       - name: SonarQube Cloud Scan
         uses: SonarSource/sonarcloud-github-action@master
