--- a/.github/workflows/Security-Scans.yml
+++ b/.github/workflows/Security-Scans.yml
@@ -156,23 +156,22 @@ jobs:
         with:
           target: 'http://www.itsecgames.com/'
           rules_file_name: '.github/workflows/rules.zap'
-          cmd_options: '-J zap_report.json -o zap_report.html'
+      #     cmd_options: '-J zap_report.json'
 
-      - name: Debug ZAP JSON Output
-        run: |
-          echo "ZAP JSON Report:"
-          cat zap_report.json
-          echo "Formatted ZAP JSON Output:"
-          jq '.' zap_report.json
-        shell: bash
+      # - name: Debug ZAP JSON Output
+      #   run: |
+      #     echo "ZAP JSON Report:"
+      #     cat zap_report.json
+      #     echo "Formatted ZAP JSON Output:"
+      #     jq '.' zap_report.json
+      #   shell: bash
 
-      - name: Upload ZAP Reports
-        uses: actions/upload-artifact@v4
-        with:
-          name: zap-reports
-          path: |
-            zap_report.json
-            zap_report.html
+      # - name: Upload ZAP Reports
+      #   uses: actions/upload-artifact@v4
+      #   with:
+      #     name: zap-reports
+      #     path: |
+      #       zap_report.json
 
       - name: Run AppSweep Scan
         id: appsweep-scan
