--- a/.github/workflows/Security-Scans.yml
+++ b/.github/workflows/Security-Scans.yml
@@ -89,28 +89,31 @@ jobs:
       - name: Run Grype Vulnerability Scan
         run: grype myapp:latest -o json > grype-report.json
 
+      - name: Combine JSON reports
+        run: |
+          jq -s '{sbom: .[0], grype: .[1]}' sbom.json grype-report.json > combined-report.json
+
       - name: Upload SBOM and Scan Reports
         uses: actions/upload-artifact@v4
         with:
           name: reports
           path: |
             sbom-pre.json
-            sbom.json
-            grype-report.json
-
-      - name: Combine JSON reports
-        run: |
-          # Example input files
-          REPORT1="sbom.json"
-          REPORT2="grype-report.json"
-          OUTPUT="combined-report.json"
-
-      - name: Upload SBOM and Scan Reports
-        uses: actions/upload-artifact@v4
-        with:
-          name: reports
-          path: |
             combined-report.json
+
+      # - name: Combine JSON reports
+      #   run: |
+      #     # Example input files
+      #     REPORT1="sbom.json"
+      #     REPORT2="grype-report.json"
+      #     OUTPUT="combined-report.json"
+
+      # - name: Upload SBOM and Scan Reports
+      #   uses: actions/upload-artifact@v4
+      #   with:
+      #     name: reports
+      #     path: |
+      #       combined-report.json
 
       # - name: Install Snyk
       #   run: npm install -g snyk
