--- a/.github/workflows/Security-Scans.yml
+++ b/.github/workflows/Security-Scans.yml
@@ -200,28 +200,28 @@ jobs:
       #   run: |
       #     snyk monitor --docker myapp:latest --project-name=SkillsViz
           
-      - name: ZAP Dynamic Analysis Scan
-        uses: zaproxy/action-full-scan@v0.12.0
-        with:
-          target: 'http://www.itsecgames.com/'
-          rules_file_name: '.github/workflows/rules.zap'
-          cmd_options: '-J zap_report.json -w report_md.md -r report_html.html'
+      # - name: ZAP Dynamic Analysis Scan
+      #   uses: zaproxy/action-full-scan@v0.12.0
+      #   with:
+      #     target: 'http://www.itsecgames.com/'
+      #     rules_file_name: '.github/workflows/rules.zap'
+      #     cmd_options: '-J zap_report.json -w report_md.md -r report_html.html'
 
 
-      - name: Debug ZAP JSON Output
-        run: |
-          echo "ZAP JSON Report:"
-          cat zap_report.json
-          echo "Formatted ZAP JSON Output:"
-          jq '.' zap_report.json
-        shell: bash
+      # - name: Debug ZAP JSON Output
+      #   run: |
+      #     echo "ZAP JSON Report:"
+      #     cat zap_report.json
+      #     echo "Formatted ZAP JSON Output:"
+      #     jq '.' zap_report.json
+      #   shell: bash
 
-      - name: Upload ZAP Reports
-        uses: actions/upload-artifact@v4
-        with:
-          name: zap-reports
-          path: |
-            zap_report.json
+      # - name: Upload ZAP Reports
+      #   uses: actions/upload-artifact@v4
+      #   with:
+      #     name: zap-reports
+      #     path: |
+      #       zap_report.json
 
       - name: Run AppSweep Scan
         id: appsweep-scan
